tests/snapshots/cli_pull_zone__pull_zone_create_json.snap
---
source: tests/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 1001,
  "Name": "test-zone-19",
  "OriginUrl": "https://origin.example.com",
  "OriginType": 2,
  "StorageZoneId": 3001,
  "CnameDomain": "test.b-cdn.net",
  "Hostnames": [
    {
      "Id": 2001,
      "Value": "test-20.b-cdn.net",
      "ForceSsl": false,
      "HasCertificate": true,
      "IsSystemHostname": true
    }
  ],
  "ZoneType": null,
  "Enabled": true,
  "Suspended": false,
  "MonthlyBandwidthUsed": 4400843,
  "MonthlyBandwidthLimit": 0,
  "CacheVersion": 54374850,
  "CacheExpirationTime": 0,
  "ZoneSecurityEnabled": false,
  "EnableGeoZoneUs": false,
  "EnableGeoZoneEu": false,
  "EnableGeoZoneAsia": false,
  "EnableGeoZoneSa": false,
  "EnableGeoZoneAf": false
}
