tests/snapshots/cli_pull_zone__pull_zone_edge_rule_list_table.snap
---
source: tests/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+--------------------------------------+--------------------+---------------+--------------+---------+
| GUID                                 | Description        | Action        | Triggers     | Enabled |
+--------------------------------------+--------------------+---------------+--------------+---------+
| a1b2c3d4-e5f6-7890-abcd-ef1234567890 | Redirect old paths | redirect      | 1 trigger(s) | true    |
+--------------------------------------+--------------------+---------------+--------------+---------+
| b2c3d4e5-f6a7-8901-bcde-f12345678901 | Block countries    | block-request | 1 trigger(s) | true    |
+--------------------------------------+--------------------+---------------+--------------+---------+
