tests/snapshots/cli_pull_zone__pull_zone_get_table.snap
---
source: tests/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+--------------+----------------------------+----------------+------+---------+-----------+----------------+-----------------+-------------------+
| ID   | Name         | Origin URL                 | CNAME          | Type | Enabled | Suspended | Bandwidth Used | Bandwidth Limit | Hostnames         |
+------+--------------+----------------------------+----------------+------+---------+-----------+----------------+-----------------+-------------------+
| 1001 | test-zone-19 | https://origin.example.com | test.b-cdn.net | -    | true    | false     | 4400843        | 0               | test-20.b-cdn.net |
+------+--------------+----------------------------+----------------+------+---------+-----------+----------------+-----------------+-------------------+
