tests/snapshots/cli_pull_zone__pull_zone_list_json.snap
---
source: tests/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Items": [
    {
      "Id": 1002,
      "Name": "test-zone-10",
      "OriginUrl": "https://origin.example.com",
      "OriginType": 2,
      "StorageZoneId": 3002,
      "CnameDomain": "test.b-cdn.net",
      "Hostnames": [
        {
          "Id": 2002,
          "Value": "test-11.b-cdn.net",
          "ForceSsl": false,
          "HasCertificate": true,
          "IsSystemHostname": true
        },
        {
          "Id": 2003,
          "Value": "test-12.b-cdn.net",
          "ForceSsl": false,
          "HasCertificate": true,
          "IsSystemHostname": false
        }
      ],
      "ZoneType": null,
      "Enabled": true,
      "Suspended": false,
      "MonthlyBandwidthUsed": 89716735,
      "MonthlyBandwidthLimit": 0,
      "CacheVersion": 54411230,
      "CacheExpirationTime": 0,
      "ZoneSecurityEnabled": false,
      "EnableGeoZoneUs": false,
      "EnableGeoZoneEu": false,
      "EnableGeoZoneAsia": false,
      "EnableGeoZoneSa": false,
      "EnableGeoZoneAf": false,
      "EdgeRules": []
    },
    {
      "Id": 1001,
      "Name": "test-zone-15",
      "OriginUrl": "https://origin.example.com",
      "OriginType": 2,
      "StorageZoneId": 3001,
      "CnameDomain": "test.b-cdn.net",
      "Hostnames": [
        {
          "Id": 2001,
          "Value": "test-16.b-cdn.net",
          "ForceSsl": false,
          "HasCertificate": true,
          "IsSystemHostname": true
        }
      ],
      "ZoneType": null,
      "Enabled": true,
      "Suspended": false,
      "MonthlyBandwidthUsed": 4400843,
      "MonthlyBandwidthLimit": 0,
      "CacheVersion": 54374850,
      "CacheExpirationTime": 0,
      "ZoneSecurityEnabled": false,
      "EnableGeoZoneUs": false,
      "EnableGeoZoneEu": false,
      "EnableGeoZoneAsia": false,
      "EnableGeoZoneSa": false,
      "EnableGeoZoneAf": false,
      "EdgeRules": []
    }
  ],
  "CurrentPage": 1,
  "TotalItems": 2,
  "HasMoreItems": false
}
